# LeafModeling

./: .gitignore  LICENSE  README.md
AlgoLeaf/2dGeneration/: 2d_test.py  Gen_Random.py  Leaf_objects.py  leaf_object.py  main_test.py  math_stuff.py  particle_object.py
AlgoLeaf/Documentation/: doc.md
AlgoLeaf/auxin_growth/: auxin.py  leaf.py  leaf_shape.py  main.py  math_stuff.py  venationPoint.py
AlgoLeaf/auxin_growth/Leaf class/: auxin.py  leaf.py  venationPoint.py
AlgoLeaf/particle_transportation/: leaf_object.py  main_test.py  math_stuff.py
Cpp/: .gitignore  CMakeLists.txt  README.md  TODO.md
Cpp/AlgoLeaf/: leaf_object.cpp  leaf_object.hh
Cpp/Data/: 2cubes1sphere.mtl  Feuille.mtl  FeuilleTextured.mtl  LeafTexture2.mtl
Cpp/src/: Chronometer.hh  Constants.hh  Examples.cpp  Examples.hh  Generator.cpp  Generator.hh  LeafWriter.cpp  LeafWriter.hh  Parser.cpp  Parser.hh  main.cpp
Cpp/src/AlgoLeaf/: CMakeLists.txt  gen_random.cpp  gen_random.hh  leaf_object.cpp  leaf_object.hh  main.cpp  math_stuff.cpp  math_stuff.hh  particle_object.cpp  particle_object.hh
Cpp/src/AlgoLeaf/Equations/: Parametric.cpp  Parametric.hh  Polar.cpp  Polar.hh
Cpp/src/AlgoLeaf/Growth/: leafGrowth.cpp
Cpp/src/AlgoLeaf/Parametric/: Parametric.hh
Cpp/src/AlgoLeaf_Auxin/: Auxin.cpp  Auxin.hh  CMakeLists.txt  Leaf.cpp  Leaf.hh  Leafshape.cpp  Leafshape.hh  Nodes.cpp  Nodes.hh  main.cpp  mathStuff.cpp  mathStuff.hh  venationPoint.cpp  venationPoint.hh
Cpp/src/AlgoLeaf_Particle/: CMakeLists.txt  gen_random.cpp  gen_random.hh  particle_object.hh
Cpp/src/AlgoLeaf_Particle/Equations/: Parametric.cpp  Parametric.hh  Polar.hh
Cpp/src/AlgoLeaf_Particle/Growth/: leafGrowth.hh
Cpp/src/L-Systems/: Condition.cpp  Condition.hh  Environment.cpp  Environment.hh  LNode.cpp  LNode.hh  LNode.hxx  LNodeFunc.cpp  LNodeFunc.hh  LObject.cpp  LObject.hh  LObject.hxx  LRule.cpp  LRule.hh  LRule.hxx  LRuleBasic.cpp  LRuleBasic.hh  LRuleBasic.hxx  LRuleContext.cpp  LRuleContext.hh  LRuleParametric.cpp  LRuleParametric.hh  LRuleStoch.cpp  LRuleStoch.hh  LRuleStoch.hxx  LTranslator.cpp  LTranslator.hh  LVar.cpp  LVar.hh  Turtle.cpp  Turtle.hh  TurtleTranslator.hh  TurtleTranslator.hxx
Cpp/src/Texturing/: Texture.cpp  Texture.hh  TextureGenerator.cpp  TextureGenerator.hh
Cpp/src/Texturing/Morphology/: Morphology.cpp  Morphology.hh
Cpp/src/Texturing/Rasterize/: Draw.cpp  Draw.hh  Edge.cpp  Edge.hh  Point2D.cpp  Point2D.hh  RasterPoint.cpp  RasterPoint.hh  Span.cpp  Span.hh
Cpp/src/Tree/: Node.cpp  Node.hh  TreeTranslator.cpp  TreeTranslator.hh
Cpp/src/Utils/: Chronometer.cpp  Color.cpp  Color.hh  Strutils.cpp  Strutils.hh  dblutils.cpp  dblutils.hh
OBJ_struct/: OBJ.py
