cmake_minimum_required(VERSION 3.10)
project(objParser)

set(CMAKE_CXX_STANDARD 17)

add_executable(objParser
        src/main.cpp
        src/Parser.cpp
        src/Parser.hh
        src/Obj/Object.cpp
        src/Obj/Object.hh
        src/Obj/Point3D.cpp
        src/Obj/Point3D.hh
        src/Obj/Material.cpp
        src/Obj/Material.hh
        src/Obj/Point2D.cpp
        src/Obj/Point2D.hh
        src/Obj/Vector3D.cpp
        src/Obj/Vector3D.hh
        src/Obj/Texture2D.cpp
        src/Obj/Texture2D.hh
        src/Obj/PointEl.cpp
        src/Obj/PointEl.hh
        src/Obj/FaceEl.cpp
        src/Obj/FaceEl.hh
        src/Obj/LineEl.cpp
        src/Obj/LineEl.hh
        src/Obj/Scene.cpp
        src/Obj/Scene.hh
        src/Obj/Element.cpp
        src/Obj/Element.hh
        src/Utils/Strutils.cpp
        src/Utils/Strutils.hh
        src/Tree/Node.cpp
        src/Tree/Node.hh
        src/Generator.cpp
        src/Generator.hh
        src/L-Systems/LNode.cpp
        src/L-Systems/LNode.hh
        src/L-Systems/LObject.cpp
        src/L-Systems/LObject.hh
        src/L-Systems/LRuleBasic.hh
        src/L-Systems/LTranslator.cpp
        src/L-Systems/LTranslator.hh
        src/L-Systems/TurtleTranslator.hh
        src/L-Systems/TurtleTranslator.hxx
        src/L-Systems/LRuleBasic.cpp
        src/L-Systems/Turtle.cpp
        src/L-Systems/Turtle.hh
        src/L-Systems/LRuleStoch.cpp
        src/L-Systems/LRuleStoch.hh
        src/L-Systems/LRule.cpp
        src/L-Systems/LRule.hh
        src/L-Systems/LRuleContext.cpp
        src/L-Systems/LRuleContext.hh
        src/L-Systems/LRuleParametric.cpp
        src/L-Systems/LRuleParametric.hh
        src/L-Systems/Condition.cpp
        src/L-Systems/Condition.hh
        src/L-Systems/Environment.cpp
        src/L-Systems/Environment.hh
        src/L-Systems/LVar.cpp
        src/L-Systems/LVar.hh
        src/L-Systems/LNodeFunc.cpp
        src/L-Systems/LNodeFunc.hh
        src/Obj/Meshes/Cylinder.cpp
        src/Obj/Meshes/Cylinder.hh
        src/Tree/TreeTranslator.cpp
        src/Tree/TreeTranslator.hh
        src/AlgoLeaf/gen_random.cpp
        src/AlgoLeaf/gen_random.hh
        src/AlgoLeaf/leaf_object.cpp
        src/AlgoLeaf/leaf_object.hh
        src/AlgoLeaf/math_stuff.cpp
        src/AlgoLeaf/math_stuff.hh
        src/AlgoLeaf/particle_object.cpp
        src/AlgoLeaf/particle_object.hh
        src/Obj/Meshes/Linker.cpp
        src/Obj/Meshes/Linker.hh
        src/Obj/Meshes/Triangle.cpp
        src/Obj/Meshes/Triangle.hh
        src/AlgoLeaf/Growth/leafGrowth.cpp
        src/AlgoLeaf/Growth/leafGrowth.hh src/AlgoLeaf/Parametric/Parametric.cpp src/AlgoLeaf/Parametric/Parametric.hh src/Examples.cpp src/Examples.hh )
